src/test/deca/context/invalid/created/mauvais-return2.deca
class B{
    int x;
    void set(){
        return x;
    }
}